# dominoes

./: .gitignore  PROBLEM_DEFINITION.md  TODO.org  pyproject.toml
docs/: domino-oracle-session-summary.org  math.md
src/domino_oracle/: __init__.py
src/domino_oracle/app/: main.py
src/domino_oracle/core/: __init__.py  constraints.py  engine.py  game_state.py  inference.py  tiles.py
src/domino_oracle/strategy/: signals.py
src/domino_oracle/viz/: player_bars.py  tile_matrix.py  timeline.py
tests/: test_constraints.py  test_game_state.py  test_inference.py  test_integration.py  test_tiles.py
